Changes made related to add to clear cart

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1529,8 +1529,6 @@ text.account.orderHistory.orderNumber = Reference Number
 text.account.orderHistory.orderPlaced= Order Placed On 
 text.account.orderHistory.orderStatus =Order Status
 text.account.orderHistory.poNumber  =P.O.Number
-text.account.orderHistory.containerType=Container Type
-text.account.orderHistory.containerPackingMaterial=Container Packing Material
 text.approval.process.already.completed=This order reference is already approved/rejected by another approver. 
 
 text.account.quickorder.enterwholenumber=Enter a whole number
@@ -1551,6 +1549,7 @@ catalog.download.success=Catalog is successfully downloaded to your Download Fol
 container.height=Container Type
 packing.type=Container Packing Material
 
+basket.your.shopping.clearCart=Clear Cart
 basket.your.shopping.container.optimization=Update Container Utilization
 product.notadded.container=Dear Customer, below mentioned product quantities cannot be added to the container with selected container packing material. Please add other products by clicking Matching Double Stackable Product Link in the last column of the Cart table
 product.notdoublestacked=Following products cannot be double stacked, Please change your cart for better optimization
