Changes made related to container optimization 1) To calculate volume for enable 2 slip sheet on the basis cases volume instead of pallet volume. 2) To compare pallet volume with container voloume and based on same consider the volume for pallet

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1569,5 +1569,6 @@ enable.containerOptimization=Enable Container Optimization
 disable.containerOptimization=Disable Container Optimization
 product.doubleStacked.clickhere=Matching Double Stackable Product Link 
 errormessage.greaterthan.totalpalletcount=Dear Customer, your order will not fit in one container. You can order maximum {0} PAL in one order with selected container packing material. Please, adjust the cart and/or place multiple orders.
+errorMessages.enable.2slipsheet=Dear Customer, you can order maximum 44 PAL in one order with 2 Slip Sheet. Please, adjust the cart and/or place multiple orders.
 
 basket.your.shopping.container.utilization.floorSpace = PAL Stack
