changes made to add color boxe and text for pallets and non-pallets

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1572,3 +1572,6 @@ errormessage.greaterthan.totalpalletcount=Dear Customer, your order will not fit
 errorMessages.enable.2slipsheet=Dear Customer, you can order maximum 44 PAL in one order with 2 Slip Sheet. Please, adjust the cart and/or place multiple orders.
 
 basket.your.shopping.container.utilization.floorSpace = PAL Stack
+
+box.pallets = Pallet
+box.nonpallets = Non-Pallet
