changes made: 1) to change logic for volume calculation for non pallets 2) added weight calculation fro nonpallet products. 3) Showing available volume/weight instead of utilized volume/weight on storefront.

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -131,7 +131,7 @@ basket.view.basket=View basket
 basket.your.shopping.basket=Your Shopping Basket
 
 basket.your.shopping.container.utilization=Container Utilization
-basket.your.shopping.container.utilization1=<br><br>Declaimer: Please note that depending on your loading preferences, the order may be modified to fit the container or container may not be fully utilized.
+basket.your.shopping.container.utilization1=<br><br>Disclaimer: Please note that depending on your loading preferences, the order may be modified to fit the container or container may not be fully utilized.
 basket.your.shopping.container.utilization.volume=Volume
 basket.your.shopping.container.utilization.weight=Weight
 basket.your.shopping.estimatedleadtime=Estimated lead time
@@ -1573,5 +1573,5 @@ errorMessages.enable.2slipsheet=Dear Customer, you can order maximum 44 PAL in o
 
 basket.your.shopping.container.utilization.floorSpace = PAL Stack
 
-box.pallets = Pallet
-box.nonpallets = Non-Pallet
+box.pallets = Pallet Products
+box.nonpallets = Non-Pallet Products
