Changes made to change configuration for 20 ft container , add message and removing invoice part

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1570,7 +1570,7 @@ errorMessages.erpmaterialid=Product Code
 errorMessages.Quantity= Exceeded Quantity
 enable.containerOptimization=Enable Container Optimization
 disable.containerOptimization=Disable Container Optimization
-product.doubleStacked.clickhere=Matching Double Stackable Product Link 
+product.doubleStacked.clickhere=Matching Full Pallets Product Link 
 errormessage.greaterthan.totalpalletcount=Dear Customer, your order will not fit in one container. You can order maximum {0} PAL in one order with selected container packing material. Please, adjust the cart and/or place multiple orders.
 errorMessages.enable.2slipsheet=Dear Customer, you can order maximum 44 PAL in one order with 2 Slip Sheet. Please, adjust the cart and/or place multiple orders.
 errormessage.partialpallet=Dear Customer, Your order contains some products whose quantity is less than a full pallet (partial pallet). Partial pallets can be shipped only with 2 wooden base packing material. Please change your packing material or remove the partial pallet products.
