Changes made to add total pallet count and partial pallet count on order history page and order confirmation email.

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
@@ -45,3 +45,9 @@ faqUrl=http://edgewell.com/legal/
 containerHeight=Container Type
 containerPackingType=Container Packing Material
 orderTotal=Order Total
+
+loadingDetails = Loading Details
+disclaimer = Disclaimer: Please note that depending on your order's product mix and product's weight the order might be modified in order to reduce potential shipping damages.
+
+fullPallets = Full Pallets
+partialPallets = Custom Pallets
