Changes related to add pallet count in  container OPtimization

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
@@ -50,4 +50,4 @@ loadingDetails = Loading Details
 disclaimer = Disclaimer: Please note that depending on your order's product mix and product's weight the order might be modified in order to reduce potential shipping damages.
 
 fullPallets = Full Pallets
-partialPallets = Custom Pallets
+partialPallets = Mixed Pallets
