--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1535,7 +1535,7 @@ text.account.orderHistory.poNumber  =P.O.Number
 text.account.orderHistory.containerType=Container Type
 text.account.orderHistory.containerPackingMaterial=Container Packing Material
 text.account.orderHistory.fullPallets= Full Pallets
-text.account.orderHistory.partialPallets=Custom Pallets
+text.account.orderHistory.partialPallets=Mixed Pallets
 text.account.orderHistory.loadingDetails =  Loading Details
 text.account.orderHistory.loadingDetails.disclaimer=Disclaimer: Please note that depending on your order's product mix and product's weight the order might be modified in order to reduce potential shipping damages.
 text.approval.process.already.completed=This order reference is already approved/rejected by another approver. 
