Following changes are made: 1) Column header material description added in confirmation email. 2) changes in base_en.properties file.

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
@@ -38,7 +38,8 @@ termsAndCondition=Terms &amp; Conditions
 receivedPromotions=Received Promotions
 UOM= UOM
 customerMaterialId=Customer Material Id
-erpMaterialId=ERP Material Id
+erpMaterialId=Material Id
+materialDescription = Material Description
 note=Note:This is an automatically generated email. Please do not reply to this mail.
 termsUrl=http://edgewell.com/legal/
 faqUrl=http://edgewell.com/legal/
