--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1581,5 +1581,5 @@ errormessage.partialpallet=Dear Customer, Your order contains some products whos
 
 basket.your.shopping.container.utilization.floorSpace = PAL Stack
 
-box.pallets = Pallet Products
-box.nonpallets = Partial-Pallet Products
+box.pallets = Full Pallets
+box.nonpallets = Mixed Pallets
