Changes made to persist container optimization data and display the same on order history page and email-orderConfirmationBody.vm

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
@@ -52,3 +52,6 @@ disclaimer = Disclaimer: Please note that depending on your order's product mix 
 
 fullPallets = Full Pallets
 partialPallets = Mixed Pallets
+firstStack=Stack-1
+secondStack=Stack-2
+palStack=PAL Stack
