--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1583,3 +1583,5 @@ basket.your.shopping.container.utilization.floorSpace = PAL Stack
 
 box.pallets = Full Pallets
 box.nonpallets = Mixed Pallets
+palStack.firstStack=Stack-1
+palStack.secondStack=Stack-2
