--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1585,3 +1585,7 @@ box.pallets = Full Pallets
 box.nonpallets = Mixed Pallets
 palStack.firstStack=Stack-1
 palStack.secondStack=Stack-2
+
+password.questionOranswer.donotMatch=Password question or answer doesnot match that to entered email id profile
+password.question.noSet=Please contact customer care, your password question or answer have not been set
+password.reset.invalidEmailId=Please enter a valid Email Id
