Changes made in local.properties file to make default UOM as CS and base*.properties file to add spanish version

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -134,7 +134,7 @@ basket.page.casesPerPallet=Number of cases per pallet
 basket.page.casesPerLayer= Number of cases per layer
 
 basket.your.shopping.container.utilization=Container Utilization
-basket.your.shopping.container.utilization1=<br><br>Disclaimer: Please note that depending on your loading preferences, the order may be modified to fit the container or container may not be fully utilized. Please note that depending on your order\u2019s product mix and the products\u2019 weight the order might be modified in order to reduce potential shipping damages.
+basket.your.shopping.container.utilization1=<br><br>Disclaimer: Please note that your order might be modified depending on product availability, un-forecasted volume, or to reduce potential shipping damages.
 basket.your.shopping.container.utilization.volume=Volume
 basket.your.shopping.container.utilization.weight=Weight
 basket.your.shopping.estimatedleadtime=Estimated lead time
@@ -1537,7 +1537,7 @@ text.account.orderHistory.containerPackingMaterial=Container Packing Material
 text.account.orderHistory.fullPallets= Full Pallets
 text.account.orderHistory.partialPallets=Mixed Pallets
 text.account.orderHistory.loadingDetails =  Loading Details
-text.account.orderHistory.loadingDetails.disclaimer=Disclaimer: Please note that depending on your order's product mix and product's weight the order might be modified in order to reduce potential shipping damages.
+text.account.orderHistory.loadingDetails.disclaimer=Disclaimer: Please note that your order might be modified depending on product availability, un-forecasted volume, or to reduce potential shipping damages.
 text.approval.process.already.completed=This order reference is already approved/rejected by another approver. 
 
 text.account.quickorder.enterwholenumber=Enter a whole number
