--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -132,7 +132,7 @@ basket.your.shopping.basket=Su carro de compras
 
 #basket.your.shopping.container.utilization=Utilizaci\u00F3n de contenedor
 basket.your.shopping.container.utilization=UTILIZACIÃN DE CONTENEDORES
-basket.your.shopping.container.utilization1=<br><br>Exenci\u00F3n de responsabilidad: Por favor tenga en cuenta que dependiendo de sus preferencias de carga , la orden puede ser modificada para adaptarse al contenedor, o el contenedor puede no ser utilizado completamente.
+basket.your.shopping.container.utilization1=<br><br>Exenci\u00F3n de responsabilidad: Tenga en cuenta que su pedido podr\u00ED modificarse en funci\u00F3n de la disponibilidad del producto , el volumen no pronosticado, o para reducir los posibles da\u00F1os durante el transporte .
 basket.your.shopping.container.utilization.volume=Volumen
 basket.your.shopping.container.utilization.weight=Peso
 basket.your.shopping.estimatedleadtime=Tiempo estimado de ejecuci\u00F3n :
@@ -1556,3 +1556,4 @@ product.doubleStacked.clickhere=Link de b\u00FAsqueda del producto de apilado do
 errormessage.greaterthan.totalpalletcount=Estimado cliente, su pedido no cabe en un contenedor. Usted puede pedir un m\u00E0ximo de {0} PAL en una orden con el material de embalaje de contenedor seleccionado . Por favor , ajuste el carrito de compra y / o ingrese m\u00FAltiples \u00F3rdenes .
 
 basket.your.shopping.container.utilization.floorSpace = PAL Stack
+text.account.orderHistory.loadingDetails.disclaimer = Exenci\u00F3n de responsabilidad: Tenga en cuenta que su pedido podr\u00ED modificarse en funci\u00F3n de la disponibilidad del producto , el volumen no pronosticado, o para reducir los posibles da\u00F1os durante el transporte .
