Change in disclaimer message in .property file

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
@@ -48,7 +48,7 @@ containerPackingType=Container Packing Material
 orderTotal=Order Total
 
 loadingDetails = Loading Details
-disclaimer = Disclaimer: Please note that depending on your order's product mix and product's weight the order might be modified in order to reduce potential shipping damages.
+disclaimer = Disclaimer: Please note that your order might be modified depending on product availability, un-forecasted volume, or to reduce potential shipping damages.
 
 fullPallets = Full Pallets
 partialPallets = Mixed Pallets
