Modified to display catalogsList in NA home Page.

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -292,6 +292,8 @@ login.error.incorrect.password.subtitle=If you forgot your password, please use 
 login.error.incorrect.password.title=Your username or password was incorrect.
 login.error.incorrect.site.us=Only US and CANADA Organization customers allowed to login.
 login.error.incorrect.site=Only LATAM Organiztion customers allowed to login.
+login.error.user.not.exist=User does not exist.
+login.error.account.incorrect=Password is not correct.
 login.link.forgottenPwd=Generate New Password
 login.login=Login
 login.password=Password
