Issue related to disable is resolved

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1346,6 +1346,8 @@ text.company.usergroups.users.subtitle=Users within a Usergroup will in-effect b
 text.company.usergroups.viewDetails.label=View Usergroup Details
 text.company.usergroups.viewPage=View Usergroups
 text.company.users.remove.confirmation.b2bapprovergroup=Doing this will remove B2B Approver {0} from Customer {1}. Do you want to proceed?
+text.company.users.remove.confirmation.b2bcustomergroup=Doing this will remove B2B Customer {0} from Customer {1}. Do you want to proceed?
+text.company.users.remove.confirmation.b2badmingroup=Doing this will remove B2B Admin {0} from Customer {1}. Do you want to proceed?
 text.company.users.remove.confirmation.permission=Doing this will remove Permission {0} from Customer {1}. Do you want to proceed?
 text.company.users.remove.confirmation.title.b2bapprovergroup=Confirm removal of B2B Approver
 text.company.users.remove.confirmation.title.permission=Confirm removal of Permission
