--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -1557,3 +1557,12 @@ errormessage.greaterthan.totalpalletcount=Estimado cliente, su pedido no cabe en
 
 basket.your.shopping.container.utilization.floorSpace = PAL Stack
 text.account.orderHistory.loadingDetails.disclaimer = Exenci\u00F3n de responsabilidad: Tenga en cuenta que su pedido podr\u00ED modificarse en funci\u00F3n de la disponibilidad del producto , el volumen no pronosticado, o para reducir los posibles da\u00F1os durante el transporte .
+
+basket.page.casesPerPallet=Número de casos por palet
+basket.page.casesPerLayer= Number of cases per layer
+
+basket.your.shopping.clearCart=Vaciar carrito
+checkout.error.terms.not.accepted=Por favor,acepte los T\u00E9rminos y Condiciones antes de enviar su pedido
+text.account.profile.CatalogDownload=Descarga del catálogo
+
+quickorder.add.product=AGREGAR PRODUCTO
