REduce the limit of permission value

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1593,3 +1593,5 @@ password.question.noSet=Please contact customer care, your password question or 
 password.reset.invalidEmailId=Please enter a valid Email Id
 
 quickorder.add.product=Add Product
+
+profile.permission.invalid=Value cannot not be more than 999999999
