--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -1566,3 +1566,5 @@ checkout.error.terms.not.accepted=Por favor,acepte los T\u00E9rminos y Condicion
 text.account.profile.CatalogDownload=Descarga del catálogo
 
 quickorder.add.product=AGREGAR PRODUCTO
+
+profile.permission.invalid=El valor no puede ser superior a 999999999
