--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -1568,3 +1568,4 @@ text.account.profile.CatalogDownload=Descarga del catálogo
 quickorder.add.product=AGREGAR PRODUCTO
 
 profile.permission.invalid=El valor no puede ser superior a 999999999
+quickorder.remove.product=Retirar
