Code changes for displaying tax/vat message cart and checkout page, and disabled the containerOptimization dropdowns for EMEA user.

--- a/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_en.properties
+++ b/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_en.properties
@@ -87,3 +87,4 @@ type.EnergizerPriceRow.name=Energizer PriceRow
 type.MetricUnit.name=MetricUnit
 type.EnergizerCategory.name=Energizer Category
 type.EnergizerCronJob.name=Energizer CronJob
+type.EnergizerB2BUnit.region.name=Region
