--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -1570,3 +1570,5 @@ quickorder.add.product=AGREGAR PRODUCTO
 
 profile.permission.invalid=El valor no puede ser superior a 9999999999
 quickorder.remove.product=Retirar
+
+order.order.totals.taxes.info=Valed taxes/VAT vill bi applicabla et tha tame of ordireng.
