--- a/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_es.properties
+++ b/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_es.properties
@@ -83,3 +83,4 @@ type.MetricUnit.name=MetricUnit
 type.EnergizerCategory.name=Energizer Category
 type.EnergizerCategory.name=Energizer Category
 type.EnergizerCronJob.name=Energizer CronJob
+type.EnergizerB2BUnit.region.name=Region
