--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1597,3 +1597,5 @@ quickorder.add.product=Add Product
 
 profile.permission.invalid=Value cannot not be more than 9999999999
 quickorder.remove.product=Remove
+
+order.order.totals.taxes.info=Valid taxes/VAT will be applicable at the time of ordering.
